<resources>
    <string name="app_name">My Application</string>
    <string name="create_your_schedule">Create your schedule</string>
    <string name="add_item">Add Item</string>
    <string name="type">Type</string>
    <string name="checkbox">CheckBox</string>
    <string name="repeating">Repeating?</string>
    <string name="repeats_every_x_days">Repeats every x days:</string>
    <string name="submit">Submit</string>
    <string name="what_date">What date?</string>
    <string name="what_time">What Time?</string>
    <string name="name">Name</string>
    <string name="finish">Finish</string>
    <string-array name="type_arr">
        <item>Workout</item>
        <item>Wake Up</item>
        <item>Cook</item>
        <item>Chores</item>
        <item>Work</item>
        <item>Eat</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_match">MatchAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="starting_time">Starting Time</string>
    <string name="ending_time">Ending Time</string>
    <string name="you_have_connected_with">You have connected with</string>
    <string name="sai">SAI</string>
    <string name="your_proxy_number">Your Proxy Number:</string>
    <string name="loading">Loading…</string>
    <string name="ishaan_sharma">Ishaan Sharma</string>
</resources>